Fix asmdef and package.json

--- a/Runtime/PjVIdeoGames.ServiceLocator.asmdef
+++ b/Runtime/PjVIdeoGames.ServiceLocator.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "pjvideogames.servicelocator.runtime",
+    "name": "PjVIdeoGames.ServiceLocator",
     "rootNamespace": "ServiceLocator",
     "references": [],
     "includePlatforms": [],
